fix: Hero section's bugs were fixed via tailwind (2023.08.11,18:26)

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -86,7 +86,7 @@ body {
     padding: 0;
     line-height: 1.5;
     background-color: var(--white);
-    color: var(--dark-navy, --dim-grey);
+    color: var(--black);
     overflow-x: hidden;
 }
 
