--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -98,7 +98,7 @@ body {
     text-align: center;
     position: fixed;
     right: 1rem;
-    bottom: 20%;
+    bottom: 15% !important;
     background-color: #939CAA;
     padding: 0 .3rem;
     border-radius: .4rem;
