--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-    width: .60rem;
+    width: .40rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -89,7 +89,9 @@ body {
     color: var(--black);
     overflow-x: hidden;
 }
-
+.container{
+    overflow: hidden !important;
+}
 .scrollup {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     width: 40px;
