--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -78,7 +78,7 @@ body {
     line-height: 1.5;
     background-color: var(--white);
     color: var(--black);
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 #preloader {
